New command 'spuds' aliased to 'spods' for backwards compatibility