@@ -1,1 +1,3 @@
-New command 'spuds' aliased to 'spods' for backwards compatibility
+New staff command 'sneeze' for Baron and above
+New command 'wipe'
+New item 'tissues'
